# JustAnotherMusicClient

./: .gitignore  README.md  mini.html  package-lock.json  package.json  tatus  vite.config.ts
.github/workflows/: release.yml
src/: main.tsx  mini.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  windows_media.rs
src/datasource/: DataSource.ts  types.ts
src/datasource/youtube/: YouTubeDataSource.ts  YouTubeMusicDataSource.ts  artwork.ts  tauriFetch.ts
src/internal/: cache.ts  logging.ts  updateChecker.ts
src/player/: AudioEngine.ts  LibraryController.ts  PlayerController.ts  Queue.ts  Recommender.ts  SearchController.ts  TabManager.ts  appSession.ts  playerStore.ts  recentPlaylists.ts  shuffleTracks.ts  useMediaSession.ts
src/ui/: App.module.css  App.tsx  platform.ts
src/ui/components/: AlbumCard.module.css  AlbumCard.tsx  AppLoadingScreen.module.css  AppLoadingScreen.tsx  ArtistLinks.module.css  ArtistLinks.tsx  DiceCard.module.css  DiceCard.tsx  Layout.module.css  Layout.tsx  MagicDice.module.css  MagicDice.tsx  MusicTabs.module.css  MusicTabs.tsx  Onboarding.module.css  Onboarding.tsx  PlaylistContextMenu.module.css  PlaylistContextMenu.tsx  SearchBar.module.css  SearchBar.tsx  SearchOverlay.module.css  SearchOverlay.tsx  Sidebar.module.css  Sidebar.tsx  StarField.tsx  TitleBar.module.css  TitleBar.tsx  TrackArtwork.module.css  TrackArtwork.tsx  TrackContextMenu.module.css  TrackContextMenu.tsx  UpdateToast.module.css  UpdateToast.tsx
src/ui/pages/: AlbumView.module.css  (+12 more)
(+23 files in other folders)
